--- a/source/trig.adoc
+++ b/source/trig.adoc
@@ -2,15 +2,7 @@
 :stem: latexmath
 :toc:
 
-= Colbyn's Trigonometry Notes
-
-.Locations
-****
-|===
-| Source Code | https://github.com/colbyn/colbyns-trigonometry-notes[GitHub.com/colbyn/colbyns-trigonometry-notes]
-| Online Edition | https://colbyn.github.io/colbyns-trigonometry-notes/[Colbyn.GitHub.io/colbyns-trigonometry-notes]
-|===
-****
+= Colbyn's Trigonometry Notes | link:index[Index]
 
 == Functional Utilities
 
@@ -159,9 +151,7 @@ Note that I haven't really used this all that much. Also it could be that this o
 
 
 
-
-
-== Pythagorean Identities
+== Pythagorean Identity Notes
 
 === Given
 [latexmath]
@@ -212,8 +202,12 @@ Note that I haven't really used this all that much. Also it could be that this o
 \end{equation}
 ++++
 
-=== Pythagorean Identities Reference
 
+== Trigonometric Identities Reference
+
+
+.Pythagorean Identities
+****
 [latexmath]
 ++++
 \begin{equation}
@@ -224,8 +218,85 @@ Note that I haven't really used this all that much. Also it could be that this o
 \end{split}
 \end{equation}
 ++++
+****
+
+.Sum and Difference Identities
+****
+[latexmath]
+++++
+include::trig/latex/sum-diff-ident.tex[]
+++++
+****
 
 
+.Cofunction Identities
+****
+[latexmath]
+++++
+include::trig/latex/cofunction-ident.tex[]
+++++
+****
+
+
+.Double-Angle Identities
+****
+- **Remember for Exams.** The professor said this isn't given during the Exam, and that we need to know this, said this in the context of Double-Angle & Half-Angle Identities.
+- The **Double-Angle Identities** are easy to derive from the **Sum and Difference Identities**.
+[latexmath]
+++++
+include::trig/latex/double-angle-ident.tex[]
+++++
+****
+
+.Half-Angle Identities
+****
+**Remember for Exams.** The professor said this isn't given during the Exam, and that we need to know this, said this in the context of Double-Angle & Half-Angle Identities, she may have been talking about just the Double-Angle Identities.
+[latexmath]
+++++
+include::trig/latex/half-angle-ident.tex[]
+++++
+**The choice of the plus or minus sign depends on the quadrant in which latexmath:[\frac{\alpha}{2}] lies.**
+****
+
+.Power-Reducing Identities
+****
+[latexmath]
+++++
+include::trig/latex/power-reducing-ident.tex[]
+++++
+****
+
+.Product-to-Sum Identities
+****
+++++
+include::trig/latex/product-to-sum-ident.tex[]
+++++
+****
+
+.Sum-to-Product-Identities
+****
+++++
+include::trig/latex/sum-to-product-ident.tex[]
+++++
+****
+
+
+== Using Trigonometric Identities
+
+=== Sum and Difference Identity Application | E.g. 1
+
+[latexmath]
+++++
+include::trig/latex/sum-diff-ident-eg1.tex[]
+++++
+
+
+=== Sum and Difference Identity Application | E.g. 2
+
+[latexmath]
+++++
+include::trig/latex/sum-diff-ident-eg2.tex[]
+++++
 
 
 == Properties of Trigonometric Functions
@@ -257,8 +328,22 @@ Note that I haven't really used this all that much. Also it could be that this o
 |latexmath:[\tan]|latexmath:[\frac{1}{2}\tau]|latexmath:[\cot]|latexmath:[\frac{1}{2}\tau]
 |===
 
+== Graphing Trigonometric Functions
 
-## Concepts
+.Graphing Mistake
+****
+Made a graphing mistake on an Exam. By default, the period of the tangent function is stem:[\pi], and it's easiest to graph a single period within the asymptotes, such as from stem:[-\frac{1}{2}\pi] to stem:[\frac{1}{2}\pi], which is what I did, but didn't update the labels with the halved period.
+****
+
+
+[tikz,"image1",svg]
+----
+include::trig/latex/tan-graph.tex[]
+----
+
+== Concepts
+
+=== Section Two
 
 * 2.1:
 ** **Complement and Supplement**
@@ -322,6 +407,14 @@ Note that I haven't really used this all that much. Also it could be that this o
 ** Graph each function by using translations.
 ** Graph the given function by using the addition-of-ordinates method.
 ** Find an equation for each blue graph.
+
+
+=== Section Three
+
+==== Exam Hints
+
+* HW 3.2 #40
+
 
 
 // When is latexmath:[\frac{1}{\cos \x} = 0]?
