--- a/source/calc.adoc
+++ b/source/calc.adoc
@@ -3,254 +3,21 @@
 :toc:
 
 
-= Colbyn's Calculus Notes | link:index[Index]
+= Colbyn's Calculus Notes
 
-== Limits
 
-== Limits of Trigonometric Functions
 
-General reference:
-[latexmath]
+ifeval::["{docname}{outfilesuffix}" == "calc.html"]
 ++++
-\begin{equation}
-\begin{split}
-\lim_{x \to a} \sin(x) &= \sin(a) \\
-\lim_{x \to a} \cos(x) &= \cos(a) \\
-\lim_{x \to a} \tan(x) &= \tan(a) \\
-\lim_{x \to a} \csc(x) &= \csc(a) \\
-\lim_{x \to a} \sec(x) &= \sec(a) \\
-\lim_{x \to a} \cot(x) &= \cot(a)
-\end{split}
-\end{equation}
+include::assets/navigation.htm[]
 ++++
-
-Others:
-[latexmath]
-++++
-\begin{equation}
-\begin{split}
-\lim_{x \to 0} \frac{\sin(x)}{x} &= 1 \\
-\lim_{x \to 0} \frac{1 - \cos(x)}{x} &= 0 \\
-\end{split}
-\end{equation}
-++++
+endif::[]
 
 
+include::calc/limits.adoc[leveloffset=+1]
+include::calc/derivatives.adoc[leveloffset=+1]
+include::calc/lines.adoc[leveloffset=+1]
 
-
-== Derivatives
-
-[latexmath]
-++++
-f^\prime(x) =
-\lim_{h \to 0} \frac{f(a + h) - f(a)}{h} =
-\lim_{x \to a} \frac{f(a) - f(x)}{a - x} =
-\frac{dy}{dx}f(x) =
-\frac{d}{dx}f(x)
-++++
-
-=== Formal Limit Definition of A Derivative
-
-**Derivative of latexmath:[f(x)=|x|] using the formal limit definition of a derivative**:
-
-[latexmath]
-++++
-\begin{equation}
-\begin{split}
-f(x) & = |x| \\
-f^\prime(a) & = \lim_{h \to 0} \frac{f(a + h) - f(a)}{h} \\
-     & = \lim_{h \to 0} \frac{|a + h| - |a|}{h} \cdot \frac{|a + h| + |a|}{|a + h| + |a|} \\
-     & = \lim_{h \to 0} \frac{|a + h|^2 - |a|^2}{h \cdot (|a + h| + |a|)} \\
-     & = \lim_{h \to 0} \frac{(a + h)^2 - a^2}{h (|a + h| + |a|)} \\
-     & = \lim_{h \to 0} \frac{a^2 + 2ah + h^2 - a^2}{h (|a + h| + |a|)} \\
-     & = \lim_{h \to 0} \frac{2ah + h^2}{h (|a + h| + |a|)} \\
-     & = \lim_{h \to 0} \frac{h \cdot (2a + h)}{h \cdot (|a + h| + |a|)} \\
-     & = \lim_{h \to 0} \frac{2a + h}{|a + h| + |a|} \\
-     & = \frac{2a + (0)}{|a + (0)| + |a|} \\
-     & = \frac{2a}{|a| + |a|} \\
-     & = \frac{2a}{2|a|} \\
-     & = \frac{2a}{2|a|} \cdot \frac{|a|}{|a|} \\
-     & = \frac{2a|a|}{2|a|^2} \\
-     & = \frac{2a|a|}{2a^2} \\
-     & = \frac{|a|}{a} \\
-f^\prime(x) &= \frac{|x|}{x}
-\end{split}
-\end{equation}
-++++
-
-**Derivative of latexmath:[f(x)=|x|] using an alternative limit definition of a derivative**:
-
-[latexmath]
-++++
-\begin{equation}
-\begin{split}
-f(x) & = |x| \\
-f^\prime(a) & = \lim_{x \to a} \frac{f(a) - f(x)}{a - x} \\
-    & = \lim_{x \to a} \frac{|a| - |x|}{a - x} \cdot \frac{|a| + |x|}{|a| + |x|} \\
-    & = \lim_{x \to a} \frac{|a|^2 - |x|^2}{(a - x) \cdot (|a| + |x|)} \\
-    & = \lim_{x \to a} \frac{(a)^2 - (x)^2}{(a - x) \cdot (|a| + |x|)} \\
-    & = \lim_{x \to a} \frac{(a - x) \cdot (a + x)}{(a - x) \cdot (|a| + |x|)} \\
-    & = \lim_{x \to a} \frac{a + x}{|a| + |x|} \\
-    & = \frac{a + (a)}{|a| + |(a)|} \\
-    & = \frac{2a}{2|a|} \\
-    & = \frac{a}{|a|} \cdot \frac{|a|}{|a|} \\
-    & = \frac{a|a|}{|a|^2} \\
-    & = \frac{a|a|}{a^2} \\
-    & = \frac{|a|}{a} \\
-f^\prime(x) &= \frac{|x|}{x}
-\end{split}
-\end{equation}
-++++
-
-=== Derivative Continuity
-
-Is a derivative continuous at latexmath:[x = a]?
-
-First we ensure:
-[latexmath]
-++++
-\lim_{x \to a^{-}} f^\prime(x) = \lim_{x \to a^{+}} f^\prime(x) = \lim_{x \to a} f^\prime(x)
-++++
-then:
-[latexmath]
-++++
-\lim_{x \to a} f^\prime(x) = f^\prime(a)
-++++
-therefore the derivative is continuous and differentiable at latexmath:[x = a].
-
-
-==== Continuous Piecewise Function
-
-===== Example
-
-Is this function differentiable at latexmath:[x = 2]?
-
-[latexmath]
-++++
-f(x) =
-\begin{cases}
-    x^2 - 3 & \text{if $x \lt 2$} \\
-    4x - 7 & \text{if $x \ge 2$}
-\end{cases}
-++++
-
-[latexmath]
-++++
-f^\prime(x) =
-\begin{cases}
-    2x & \text{if $x \lt 2$} \\
-    4 & \text{if $x \ge 2$}
-\end{cases}
-++++
-
-To check:
-[latexmath]
-++++
-\begin{equation}
-\begin{split}
-\lim_{x \to 2^{-}} f^\prime(x) &= 2(2) = 4 \\
-\lim_{x \to 2^{+}} f^\prime(x) &= 4 \\
-\text{therefore} \\
-\lim_{x \to 2} f^\prime(x) &= 4 \\
-\text{then we check} \\
-\lim_{x \to 2} f^\prime(x) &= f^\prime(2) \\
-\end{split}
-\end{equation}
-++++
-
-Therefore the derivative is continuous and differentiable at latexmath:[x = 2].
-
-== Lines
-
-=== Tangent Line
-
-[latexmath]
-++++
-\begin{equation}
-\begin{split}
-y - y_1 &= f^\prime(x_1)(x-x_1) \\
-y &= mx + b
-\end{split}
-\end{equation}
-++++
-
-.More succinctly
-****
-[latexmath]
-++++
-\begin{equation}
-\begin{split}
-y &= f(a) + f^\prime(a)(x - a)
-\end{split}
-\end{equation}
-++++
-
-At a given point latexmath:[x = a].
-****
-
-.Example
-****
-For example, given latexmath:[f(x) = x^3 + 3x^2], and asked to find the tangent like at latexmath:[x = 1]:
-[latexmath]
-++++
-\begin{equation}
-\begin{split}
-f(x) &= x^3 + 3x^2 \\
-y &= f(1) + f^\prime(1)(x - 1) \\
-  &= 4 + 9(x - 1) \\
-  &= 9x - 5
-\end{split}
-\end{equation}
-++++
-
-Therefore, the tangent line at latexmath:[x = 1] is latexmath:[y = 9x - 5].
-****
-
-
-==== Alternative Overview
-
-[latexmath]
-++++
-y = mx + b
-++++
-
-Generally, there are three things you will need when given some latexmath:[f(x)]:
-
-* The value of latexmath:[x] (usually provided to you)
-* The value of latexmath:[y] or latexmath:[f(x)] (if it's not provided to you, just plug it in)
-* The value of m (i.e. the slope, such as the value from latexmath:[f^\prime(x)])
-* Once you have latexmath:[m], then solve for latexmath:[b] by plugging in some latexmath:[(x, y)] into your latexmath:[y = mx + b] equation.
-
-
-=== Normal Lines
-- https://www.desmos.com/calculator/ybtppzvv1a[Desmos Example of Normal Lines]
-
-The slope of the normal line is the negative reciprocal of the slope of the tangent line. Everything else is the same as the tangent line.
-
-[latexmath]
-++++
-\begin{equation}
-\begin{split}
-y - y_1 &= -\frac{1}{f^\prime(x_1)} (x-x_1) \\
-y &= -\frac{1}{m}x + b
-\end{split}
-\end{equation}
-++++
-
-
-=== Perpendicular Lines
-
-The same as the Normal Lines. According to these https://www.quora.com/What-is-the-differences-between-normal-and-perpendicular[Quora answers]:
-
-----
-A normal makes an angle of 90° with a 2 dimensional SURFACE
-while,
-A perpendicular makes an angle of 90° with a one dimensional LINE.
-----
-
-----
-Basically perpendicular relates to line and normal relates to a plane,but both make 90° with their respective counterparts. The later is a vector quantity, where the former is scalar.
-----
 
 
 
