lots of updates

--- a/source/calc.adoc
+++ b/source/calc.adoc
@@ -1,4 +1,4 @@
-// :autofit-option:
+:sectanchors:
 :stem: latexmath
 :toc:
 
@@ -14,10 +14,11 @@ include::assets/navigation.htm[]
 endif::[]
 
 
+include::calc/concepts.adoc[leveloffset=+1]
 include::calc/limits.adoc[leveloffset=+1]
 include::calc/derivatives.adoc[leveloffset=+1]
 include::calc/lines.adoc[leveloffset=+1]
-
+include::calc/definitions.adoc[leveloffset=+1]
 
 
 
