--- a/source/calc1/chapter3.adoc
+++ b/source/calc1/chapter3.adoc
@@ -1,3 +1,4 @@
+:imagesdir: ../../static/images
 :sectanchors:
 :stem: latexmath
 :toc:
@@ -13,6 +14,12 @@ endif::[]
 
 
 == §3.1 | Maximum and Minimum Values
+
+image::calc1/3.1.1a.png[Test]
+
+image::calc1/3.1.1b.png[Test]
+
+image::calc1/3.1.1c.png[Test]
 
 [NOTE]
 ====
